--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         ></textarea>
 
         <div class="terminos">
-          <p>Solo letras minúsculas y sin acentos.</p>
+          <p>Solo letras minúsculas y sin acentos</p>
         </div>
         <div class="botones">
           <button class="btn-encriptar" type="button" onclick="encriptar()">
@@ -41,7 +41,7 @@
         <div class="mensaje-encriptado" id="mensaje-encriptado">
           <h2 id="titulo-mensaje">Ningún mensaje fue encontrado</h2>
           <p id="parrafo">
-            Ingresa el texto que deseas encriptar o desencriptar
+            Ingresar el texto que deseas encriptar o desencriptar
           </p>
         </div>
       </div>
